--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,22 @@
             <version>2.3.4.RELEASE</version>
         </dependency>
         <!--data-->
+
+        <!--test-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.3.4.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!--test-->
     </dependencies>
 
     <build>
