--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,20 @@
             <version>1.4.200</version>
             <scope>test</scope>
         </dependency>
-
         <!--test-->
+
+        <!--security-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.3.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+        <!--security-->
     </dependencies>
 
     <build>
